Update title and header for festival event

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>市川学園 認証フォーム</title>
+    <title>市川学園 文化祭投票フォーム</title>
     <style>
         /* 市川学園風テーマ設定 */
         :root {
@@ -154,8 +154,8 @@
 <body>
 
     <header id="page-header">
-        <h1 class="school-name">市川学園</h1>
-        <div class="sub-title">ICHIKAWA GAKUEN</div>
+        <h1 class="school-name">なずな祭</h1>
+        <div class="sub-title">NAZUNA FESTIVAL</div>
     </header>
 
     <!-- 認証エリア -->
