Update favicon and API URL in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>市川学園 文化祭投票フォーム</title>
+    
+    <!-- ▼ ファビコン設定 ▼ -->
+    <link rel="icon" href="https://www.ichigaku.ac.jp/html/top/images/img_topics04.jpg" type="image/jpeg">
+
+    <!-- ▼ 通信高速化設定（GASへの接続を事前確立） ▼ -->
+    <link rel="preconnect" href="https://script.google.com">
+    <link rel="preconnect" href="https://script.googleusercontent.com">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -337,7 +345,7 @@
 
     <script>
         // ▼ GASのURL ▼
-        const API_URL = "https://script.google.com/macros/s/AKfycbwYIfHqx4I79YS51TDpcJydlBm2ssWDAbMq2z3jG2Ew-khfSSUvlutBUmyL0c1081cDlQ/exec"; 
+        const API_URL = "https://script.google.com/macros/s/AKfycbwRdqr4FR4ftRbci_oc6ioiKQUorrUaapsKPPyj41pmftBRmMaLx_XnuDB2_28hNFrmEg/exec"; 
 
         let iframeLoadCount = 0;
 
